<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="10dp"
    android:background="@drawable/bg"
    android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:id="@+id/imageView" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:textSize="14sp"
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="highlight"
        android:textColorHint="@android:color/white"
        app:met_maxCharacters="120"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="120"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />
    <Button android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="#00C4EF"
        android:layout_height="wrap_content">
    </Button>
    <Button android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:background="#00C4EF"
        android:layout_height="wrap_content">
    </Button>
    <TextView
        android:id="@+id/textViewForgetPassword"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="@string/forg"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>