<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:padding="10dp"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
         <ImageView
             android:src="@drawable/back"
             android:padding="10dp"
             android:layout_gravity="left"
             android:layout_width="40dp"
             android:layout_height="40dp" />
            <ImageView
                android:src="@drawable/logo"
                android:layout_width="match_parent"
                android:layout_height="150dp" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="14sp"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                android:textColorHint="@android:color/white"
                app:met_maxCharacters="120"
                android:inputType="textEmailAddress"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="14sp"
                android:inputType="textPassword"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                android:textColorHint="@android:color/white"
                app:met_maxCharacters="120"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                android:textSize="14sp"
                android:inputType="textPassword"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                android:textColorHint="@android:color/white"
                app:met_maxCharacters="120"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true" />
            <Button android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:text="@string/register"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:background="#00C4EF"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>