<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="#ffffff">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="250dp">
            <ImageView
                android:id="@+id/imageViewPic"
                android:layout_width="match_parent"
                android:layout_height="250dp"
               />
            <TextView
                android:id="@+id/myImageViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/imageViewPic"
                android:layout_alignTop="@+id/imageViewPic"
                android:layout_alignRight="@+id/imageViewPic"
                android:layout_alignBottom="@+id/imageViewPic"
                android:layout_margin="1dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="Click to Upload Receipt"
                android:textColor="@android:color/white" />
        </RelativeLayout>

    <Button
        android:id="@+id/buttonChange"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@drawable/change_btn"
        android:layout_width="120dp"
        android:layout_height="40dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/heading"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:textSize="14sp"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="highlight"
        android:textColorHint="@android:color/darker_gray"
        app:met_maxCharacters="120"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="40dp">
    <TextView
        android:id="@+id/textViewName"
        android:layout_weight="0.33"
        android:text="@string/warranty"
        android:layout_width="0dp"
        android:layout_height="40dp" />

    <Spinner
        android:id="@+id/spinnerValue"
        android:layout_weight="0.33"
        android:layout_width="0dp"
        android:entries="@array/warranty_arrays"
        android:layout_height="40dp">
    </Spinner>

    <Spinner
        android:id="@+id/spinnerMonth"
        android:layout_weight="0.33"
        android:layout_width="0dp"
        android:entries="@array/warranty_month_array"
        android:layout_height="40dp">
    </Spinner>

</LinearLayout>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:textSize="14sp"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="highlight"
        android:textColorHint="@android:color/darker_gray"
        app:met_maxCharacters="120"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textCursorDrawable="@drawable/text_cursor_cyan"
        android:textSize="14sp"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="highlight"
        android:textColorHint="@android:color/darker_gray"
        app:met_maxCharacters="120"
        app:met_primaryColor="?colorAccent"
        app:met_singleLineEllipsis="true" />
    <Button
        android:id="@+id/buttonOk"
        android:textColor="@android:color/white"
        android:layout_width="120dp"
        android:layout_gravity="center"
        android:background="@drawable/ok_btn"
        android:layout_height="40dp" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>